<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TBtv"
        android:text="@string/toggle_tv_text"
        android:layout_alignBaseline="@+id/toggleButton"
        android:layout_alignBottom="@+id/toggleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_not_selected"
        android:id="@+id/SPtv"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignLeft="@+id/TBtv"
        android:layout_alignStart="@+id/TBtv"
        android:layout_toEndOf="@id/TBtv"
        android:layout_toRightOf="@id/TBtv" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_not_selected"
        android:id="@+id/CBtv"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/SPtv"
        android:layout_alignLeft="@+id/SPtv"
        android:layout_alignStart="@+id/SPtv" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_tv_text"
        android:id="@+id/TPtv"
        android:layout_below="@+id/checkBox"
        android:layout_alignLeft="@+id/CBtv"
        android:layout_alignStart="@+id/CBtv"
        android:layout_marginTop="23dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_tv_text"
        android:id="@+id/DPtv"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/TPtv"
        android:layout_alignStart="@+id/TPtv"
        android:layout_marginTop="28dp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/toggleButton"
        android:layout_alignLeft="@+id/toggleButton"
        android:layout_alignRight="@+id/toggleButton"
        android:layout_alignStart="@+id/toggleButton"
        android:layout_below="@+id/toggleButton"
        android:layout_marginTop="34dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:layout_alignBaseline="@+id/CBtv"
        android:layout_below="@+id/spinner"
        android:layout_alignBottom="@+id/CBtv"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_pick"
        android:layout_alignBaseline="@+id/TPtv"
        android:layout_alignBottom="@+id/TPtv"
        android:layout_alignLeft="@+id/toggleButton"
        android:layout_alignStart="@+id/toggleButton" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_pick"
        android:layout_alignBaseline="@+id/DPtv"
        android:layout_alignBottom="@+id/DPtv"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

</RelativeLayout>